--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Needs For React</h1>
     <script src="js/es6.js"></script>
     <script src="js/arrayMethods.js"></script>
+    <script src="js/arrayDestructureing.js"></script>
 </body>
 </html>
